[package]
name = "sha-omikuji"
version = "0.1.0"
edition = "2021"
description = "SHA-256 based deterministic fortune telling CLI"
license = "MIT"

[dependencies]
sha2 = "0.10"
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
